<resources>
    <string name="app_name">Shrim Smart</string>
    <string name="app_header">SHRIM</string>
    <string name="app_greeting">Good Morning App!</string>
    <string name="username_hint">Type User name...</string>
    <string name="app_dashboard">Welocme in App!</string>
    <string name="share">share</string>
    <string name="options">options</string>
    <string name="settings">settings</string>
    <string name="help">help</string>
    <string name="action_search">Search</string>

    <string name="count">Nothing is selected</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Speak</string>
    <string name="about">About</string>
    <string name="exit">Logout</string>
    <string name="about_toast">About is clicked</string>
    <string name="add">Add</string>
</resources>
